# protected-auction-key-value-service

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  WORKSPACE
builders/images/build-debian/: Dockerfile  install_apps
components/cloud_config/: BUILD.bazel  instance_client_azure.cc  parameter_client_azure.cc  parameter_client_azure_test.cc
components/cloud_config/parameter_update/: BUILD.bazel
components/data/blob_storage/: BUILD.bazel  delta_file_notifier.cc  delta_file_notifier_test.cc
components/data/common/: BUILD.bazel
components/data/file_group/: file_group.cc  file_group_search_utils.cc  file_group_search_utils_test.cc  file_group_test.cc
components/data/realtime/: BUILD.bazel
components/data_server/microsoft_ann_index/: BUILD.bazel  index.cc  index.h  index_test.cc  snapshot.cc  snapshot.h  snapshot_config.cc  snapshot_config.h  snapshot_config_test.cc  snapshot_index.cc  snapshot_index.h  snapshot_index_test.cc  snapshot_keeper.cc  snapshot_keeper.h  snapshot_keeper_test.cc  snapshot_mapping.cc  snapshot_mapping.h  snapshot_mapping_test.cc  snapshot_test.cc
components/internal_server/: BUILD.bazel  microsoft_ann_lookup.cc  microsoft_ann_lookup.h  microsoft_ann_lookup_test.cc
components/telemetry/: server_definition.h
components/tools/: data_loading_analyzer.cc
components/udf/: BUILD.bazel  udf_client_test.cc  udf_config_builder.cc  udf_config_builder.h
components/util/: BUILD.bazel  platform_initializer_azure.cc
getting_started/quick_start_assets/: Dockerfile.server  microsoft-wsl-docker-compose.yaml
production/packaging/: build_and_test_all_in_docker
public/: base_types.proto  constants.cc  constants.h  constants_test.cc
public/data_loading/: filename_utils.cc  filename_utils.h  filename_utils_test.cc
testing/functionaltest/: test_data.bzl
third_party_deps/: microsoft_diskann.BUILD  microsoft_diskann_deps.bzl  microsoft_diskann_mkl.patch  microsoft_diskann_noexcept.patch
tools/microsoft_index_builder/: BUILD.bazel  README.md
tools/request_simulation/: BUILD.bazel
(+51 files in other folders)
