# Copyright (c) Microsoft Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = [
    "//components:__subpackages__",
    "//tools:__subpackages__",
])

cc_library(
    name = "microsoft_ann_index",
    srcs = [
        "index.cc",
        "snapshot.cc",
        "snapshot_config.cc",
        "snapshot_index.cc",
        "snapshot_keeper.cc",
        "snapshot_mapping.cc",
    ],
    hdrs = [
        "index.h",
        "snapshot.h",
        "snapshot_config.h",
        "snapshot_index.h",
        "snapshot_keeper.h",
        "snapshot_mapping.h",
    ],
    deps = [
        "//components/telemetry:server_definition",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@google_privacysandbox_servers_common//src/logger:request_context_logger",
        "@microsoft_diskann//:diskann_library",
        "@nlohmann_json//:lib",
    ],
)

cc_test(
    name = "microsoft_ann_index_test",
    size = "small",
    srcs = [
        "index_test.cc",
        "snapshot_config_test.cc",
        "snapshot_index_test.cc",
        "snapshot_keeper_test.cc",
        "snapshot_mapping_test.cc",
        "snapshot_test.cc",
    ],
    deps = [
        ":microsoft_ann_index",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
